# plszip

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  mk_big.sh  notes.txt  run_compress_test.sh
benchs/: bench.sh  gen_big.sh  run_hyperfine.sh
sandbox/: CMakeLists.txt  plzip.cpp  sandbox.c  sandbox.c.old  sml_first.cpp  sml_hello_world.cpp  zinf.c
sandbox/tools/: CMakeLists.txt  gen_fixed_huffman.c  gen_tables.py
src/: CMakeLists.txt  compress.cpp  compress_tables.h  crc32.cpp  crc32.h  display_huffman_codes.cpp  fixed_huffman_trees.h  gen_fixed_huffman.c  huffman_practice.py  inflate.c  inflate.cpp  inflate.old.c  inflate2.cpp  inflate_tables.h  plszip.cpp  plszip.h  plzip.cpp  pzlib.cpp  pzlib.h
src/tools/: display_huffman_codes.cpp  gen_fixed_huffman.c  inflate.old.c
tests/: check.sh  clean.sh  compress.sh  compress_all.sh  decompress.sh  run_compress_tests.sh  run_inflate_tests.sh  run_tests.sh  size_test.sh  test10.txt  test12.txt  test19.txt  test2.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  test3.txt  test4.txt  test6.txt  test9.txt
tools/: Makefile  gen.py  gen_fixed_trees.py  gen_length_codes.py  utils.py
